--- a/servises/arbitration-resolution.html
+++ b/servises/arbitration-resolution.html
@@ -136,7 +136,7 @@
                                     <a href="../contact.html" class="contact-btn" data-key="contact-title">
                                         Contact Us
                                     </a>
-                                    <a href="www.jdavocat.com" class="contact-btn1" data-key="visit-website">
+                                    <a href="www.jdavocat.com" class="contact-btn1" data-key="web-visit">
                                         Visit Website
                                     </a>
                                 </div>
