--- a/servises/business-uae.html
+++ b/servises/business-uae.html
@@ -97,11 +97,11 @@
                     <div class="row">
                         <div class="col-xl-12">
                             <div class="hero-cap pt-100">
-                                <h2>COMPANIES LAW</h2>
+                                <h2 data-key="service1">Business Setup in UAE Free Zones</h2>
                                 <nav aria-label="breadcrumb ">
                                     <ol class="breadcrumb">
-                                    <li class="breadcrumb-item"><a href="../index.html">Home</a></li>
-                                    <li class="breadcrumb-item"><a href="../services.html">Services</a></li> 
+                                        <li class="breadcrumb-item"><a href="../index.html" data-key="nav-home">Home</a></li>
+                                        <li class="breadcrumb-item"><a href="../services.html" data-key="nav-services">Services</a></li> 
                                     </ol>
                                 </nav>
                             </div>
@@ -118,26 +118,26 @@
             <div class="col-12">
                 <div class="single-services section-padding2">
                     <div class="details-caption">
-                        <h3>Business Setup in UAE Free Zones</h3>
-                        <p class="mb-50">Business establishment in the Free Zones of the UAE provides a streamlined framework for foreign investors to set up and operate companies. These zones offer 100% foreign ownership, tax exemptions, simplified registration processes, and access to world-class infrastructure. Businesses benefit from tailored regulations designed to encourage innovation, attract global talent, and foster economic growth in a competitive environment.</p>
+                        <h3 data-key="service1">Business Setup in UAE Free Zones</h3>
+                        <p class="mb-50" data-key="service1-description">Business establishment in the Free Zones of the UAE provides a streamlined framework for foreign investors to set up and operate companies. These zones offer 100% foreign ownership, tax exemptions, simplified registration processes, and access to world-class infrastructure. Businesses benefit from tailored regulations designed to encourage innovation, attract global talent, and foster economic growth in a competitive environment.</p>
                         <!-- Styled List -->
-                        <h3 class="mt-5">Key benefits of setting up in UAE Free Zones include:</h3>
+                        <h3 class="mt-5" data-key="service1-key">Key benefits of setting up in UAE Free Zones include:</h3>
                         <ul class="styled-list">
-                            <li>100% Foreign Ownership: Enjoy full control of your business without the need for a local sponsor.</li>
-                            <li>Tax Exemptions: Benefit from exemptions on corporate taxes and personal income taxes for a set period.</li>
-                            <li>Simplified Registration: Quick and easy company formation processes with minimal bureaucracy.</li>
-                            <li>World-Class Infrastructure: Access to state-of-the-art facilities and business environments.</li>
-                            <li>Tailored Regulations: Free Zones are designed to foster innovation, economic growth, and attract global talent.</li>
-                            <li>Strategic Location: Situated in key locations offering access to international markets, especially in logistics and trade.</li>
-                        </ul>                                                                         
-                        <h3><br>Our service:</h3>
-                        <p>At Acker Choquette Dray Legal Consultants, we offer expert guidance for setting up businesses in the UAE's Free Zones. Whether you're looking to establish a new company, register your business, or ensure full legal compliance, our team provides tailored solutions to help you navigate the process efficiently. We offer in-depth knowledge of Free Zone regulations, tax benefits, and strategic advice on choosing the best Free Zone to suit your business needs. Let us guide you to success and ensure a smooth, compliant entry into the UAE market.</p>
+                            <li data-key="service1-benefit1">100% Foreign Ownership: Enjoy full control of your business without the need for a local sponsor.</li>
+                            <li data-key="service1-benefit2">Tax Exemptions: Benefit from exemptions on corporate taxes and personal income taxes for a set period.</li>
+                            <li data-key="service1-benefit3">Simplified Registration: Quick and easy company formation processes with minimal bureaucracy.</li>
+                            <li data-key="service1-benefit4">World-Class Infrastructure: Access to state-of-the-art facilities and business environments.</li>
+                            <li data-key="service1-benefit5">Tailored Regulations: Free Zones are designed to foster innovation, economic growth, and attract global talent.</li>
+                            <li data-key="service1-benefit6">Strategic Location: Situated in key locations offering access to international markets, especially in logistics and trade.</li>
+                        </ul>                                                                                                
+                        <h3 data-key="service-title"><br>Our service</h3>
+                        <p data-key="service1-content">At Acker Choquette Dray Legal Consultants, we offer expert guidance for setting up businesses in the UAE's Free Zones. Whether you're looking to establish a new company, register your business, or ensure full legal compliance, our team provides tailored solutions to help you navigate the process efficiently. We offer in-depth knowledge of Free Zone regulations, tax benefits, and strategic advice on choosing the best Free Zone to suit your business needs. Let us guide you to success and ensure a smooth, compliant entry into the UAE market.</p>
                          <!-- Add Contact Button -->
                         <div class="contact mt-4">
                             <a href="../contact.html" class="contact-btn">
                                 Contact Us
                             </a>
-                            <a href="https://ackerchoquette.legal/legal-services/business-establishment-in-the-free-zones-of-the-uae/" class="contact-btn1">
+                            <a href="https://ackerchoquette.legal/legal-services/business-establishment-in-the-free-zones-of-the-uae/" class="contact-btn1" data-key="web-visit">
                                 Visit Website
                             </a>
                         </div>
