--- a/servises/commercial-law.html
+++ b/servises/commercial-law.html
@@ -138,7 +138,7 @@
                                     <a href="../contact.html" class="contact-btn">
                                         Contact Us
                                     </a>
-                                    <a href="www.jdavocat.com" class="contact-btn1">
+                                    <a href="www.jdavocat.com" class="contact-btn1" data-key="web-visit">
                                         Visit Website
                                     </a>
                                 </div>
