--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                                         <li><a href="contact.html" data-key="nav-contact">Contact</a></li>
                                         <!-- Language Switcher -->
                                         <li class="dropdown">
-                                            <a href="javascript:void(0);" class="dropbtn" data-key="switch">Language 🌍</a>
+                                            <a href="javascript:void(0);" class="dropbtn">Language 🌍</a>
                                             <div class="dropdown-content">
                                                 <a href="#" onclick="changeLanguage('en')"><img src="./assets/img/icon/uk.png" alt="English"> Eng</a>
                                                 <a href="#" onclick="changeLanguage('fr')"><img src="./assets/img/icon/fr.png" alt="Français"> Fra</a>
@@ -426,10 +426,10 @@
 </script>
 	<!-- JS here -->
         <script src="./assets/js/translate.js"> </script>
+        <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
         <script>
             AOS.init();
         </script>
-        <script src="./assets/js/translate.js"> </script>
         <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
 		<!-- Jquery, Popper, Bootstrap -->
 		<script src="./assets/js/vendor/jquery-1.12.4.min.js"></script>
