--- a/servises/criminal-law.html
+++ b/servises/criminal-law.html
@@ -69,9 +69,9 @@
                                             <li class="dropdown">
                                                 <a href="javascript:void(0);" class="dropbtn" data-key="switch">Language 🌍</a>
                                                 <div class="dropdown-content">
-                                                    <a href="#" onclick="changeLanguage('en')"><img src="./assets/img/icon/uk.png" alt="English"> Eng</a>
-                                                    <a href="#" onclick="changeLanguage('fr')"><img src="./assets/img/icon/fr.png" alt="Français"> Fra</a>
-                                                    <a href="#" onclick="changeLanguage('ar')"><img src="./assets/img/icon/ar.png" alt="العربية"> Arab</a>
+                                                    <a href="#" onclick="changeLanguage('en')"><img src="../assets/img/icon/uk.png" alt="English"> Eng</a>
+                                                    <a href="#" onclick="changeLanguage('fr')"><img src="../assets/img/icon/fr.png" alt="Français"> Fra</a>
+                                                    <a href="#" onclick="changeLanguage('ar')"><img src="../assets/img/icon/ar.png" alt="العربية"> Arab</a>
                                                 </div>
                                             </li>
                                         </ul>
@@ -92,16 +92,16 @@
     <main>
         <!-- slider Area Start-->
         <div class="slider-area ">
-            <div class="single-slider hero-overly slider-height2 d-flex align-items-center" data-background="../assets/img/service/servicess2.jpg">
+            <div class="single-slider hero-overly slider-height2 d-flex align-items-center" data-background="../assets/img/service/servicess9.png">
                 <div class="container">
                     <div class="row">
                         <div class="col-xl-12">
                             <div class="hero-cap pt-100">
-                                <h2>COMPANIES LAW</h2>
+                                <h2 data-key="service7">CRIMINAL LAW</h2>
                                 <nav aria-label="breadcrumb ">
                                     <ol class="breadcrumb">
-                                    <li class="breadcrumb-item"><a href="../index.html">Home</a></li>
-                                    <li class="breadcrumb-item"><a href="../services.html">Services</a></li> 
+                                        <li class="breadcrumb-item"><a href="../index.html" data-key="nav-home">Home</a></li>
+                                        <li class="breadcrumb-item"><a href="../services.html" data-key="nav-services">Services</a></li>  
                                     </ol>
                                 </nav>
                             </div>
@@ -118,26 +118,28 @@
             <div class="col-12">
                 <div class="single-services section-padding2">
                     <div class="details-caption">
-                        <h3>Criminal Law and Compliance</h3>
-                        <p class="mb-50">Our criminal law and compliance services in the UAE are designed to provide expert guidance and robust defense. With a deep understanding of the complexities of UAE criminal law and the Dubai justice system, our team of seasoned lawyers ensures comprehensive support throughout every stage of your case. From sound legal advice to developing effective, tailored defense strategies, we are committed to protecting your rights and achieving the best possible outcomes.</p>
+                        <h3 data-key="service3">Criminal Law</h3>
+                        <p class="mb-50" data-key="service3-description">Our criminal law and compliance services in the UAE are designed to provide expert guidance and robust defense. With a deep understanding of the complexities of UAE criminal law and the Dubai justice system, our team of seasoned lawyers ensures comprehensive support throughout every stage of your case. From sound legal advice to developing effective, tailored defense strategies, we are committed to protecting your rights and achieving the best possible outcomes.</p>
                         <!-- Styled List -->
-                        <h3 class="mt-5">Key areas of our criminal law services include:</h3>
+                        <h3 class="mt-5" data-key="service3-key">Key areas of our criminal law services include:</h3>
                         <ul class="styled-list">
-                            <li>Criminal Defense: Representing clients in criminal cases to safeguard their rights and ensure a fair trial.</li>
-                            <li>Legal Advice: Providing expert legal counsel on criminal matters to help clients understand their options.</li>
-                            <li>Investigation Support: Assisting in the investigation phase by ensuring all evidence is handled properly and fairly.</li>
-                            <li>Appeals: Representing clients in appeals to challenge unfair convictions or sentences.</li>
-                            <li>Compliance: Ensuring compliance with UAE laws, regulations, and procedures throughout the criminal process.</li>
-                            <li>Case Management: Offering complete support throughout the legal process, from arrest to trial and sentencing.</li>
+                            <li data-key="service3-item1">Criminal Defense: Representing clients in criminal cases to safeguard their rights and ensure a fair trial.</li>
+                            <li data-key="service3-item2">Legal Advice: Providing expert legal counsel on criminal matters to help clients understand their options.</li>
+                            <li data-key="service3-item3">Investigation Support: Assisting in the investigation phase by ensuring all evidence is handled properly and fairly.</li>
+                            <li data-key="service3-item4">Appeals: Representing clients in appeals to challenge unfair convictions or sentences.</li>
+                            <li data-key="service3-item5">Compliance: Ensuring compliance with UAE laws, regulations, and procedures throughout the criminal process.</li>
+                            <li data-key="service3-item6">Case Management: Offering complete support throughout the legal process, from arrest to trial and sentencing.</li>
                         </ul>                                                                         
-                        <h3><br>Our service:</h3>
-                        <p>At Acker Choquette Dray Legal Consultants, we specialize in criminal law, offering expert defense strategies and legal advice in the UAE. Our experienced legal team is committed to providing robust representation in criminal cases, whether you're facing charges or need assistance with compliance issues. We guide clients through every stage of the criminal justice process, ensuring that their rights are protected and their best interests are upheld. Let us help you navigate the complexities of criminal law in the UAE and achieve the most favorable outcome possible.</p>
+                        <h3 data-key="service-title"><br>Our service</h3>
+                        <p data-key="service3-content">At Acker Choquette Dray Legal Consultants, we specialize in criminal law, offering expert defense strategies and legal advice in the UAE. Our experienced legal team is committed to providing robust representation in criminal cases, whether you're facing charges or need assistance with compliance issues. We guide clients through every stage of the criminal justice process, ensuring that their rights are protected and their best interests are upheld. Let us help you navigate the complexities of criminal law in the UAE and achieve the most favorable outcome possible.</p>
                          <!-- Add Contact Button -->
                         <div class="contact mt-4">
                             <a href="../contact.html" class="contact-btn">
                                 Contact Us
                             </a>
-                             
+                            <a href="www.jdavocat.com" class="contact-btn1" data-key="web-visit">
+                                Visit Website
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -225,7 +227,7 @@
 
 	<!-- JS here -->
 	
-        <script src="./assets/js/translate.js"> </script>
+        <script src="../assets/js/translate.js"> </script>
         <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
         <script>
             AOS.init();
